--- a/public/assets/css/home-user.css
+++ b/public/assets/css/home-user.css
@@ -1,5 +1,6 @@
 .books-list {
     color: #000;
+    height: 3200px;
 }
 
 .content {
@@ -9,6 +10,7 @@
     height: 300px;
     /* background-color: yellow; */
     img {
+        height: 70%;
         max-width: 100%;
     }
     p {
